Updated payload picker

--- a/Frontend/Warhead/Warhead/Base.lproj/Main.storyboard
+++ b/Frontend/Warhead/Warhead/Base.lproj/Main.storyboard
@@ -58,9 +58,12 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="372" height="70"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <segue destination="X4K-Ff-9kT" kind="show" identifier="Airdrop" id="IMR-ef-rud"/>
+                                                </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Airdrop to location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4B7-Hn-j4Q">
-                                                <rect key="frame" x="29" y="24.333333333333343" width="155.33333333333334" height="21.666666666666671"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Airdrop (Location drop)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4B7-Hn-j4Q">
+                                                <rect key="frame" x="29" y="24.333333333333343" width="196" height="21.666666666666671"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -93,9 +96,12 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="372" height="70"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <segue destination="X4K-Ff-9kT" kind="show" identifier="Hellfire" id="IFd-KM-zLx"/>
+                                                </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hellfire (P2P transfer)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCd-mO-6DO">
-                                                <rect key="frame" x="29" y="24.333333333333343" width="183.33333333333334" height="21.666666666666671"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hellfire (P2P drop)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCd-mO-6DO">
+                                                <rect key="frame" x="29" y="24.333333333333343" width="155.66666666666666" height="21.666666666666671"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -251,7 +257,99 @@
             </objects>
             <point key="canvasLocation" x="988.54961832061065" y="26.760563380281692"/>
         </scene>
+        <!--Location Picker View Controller-->
+        <scene sceneID="TL5-fq-I0C">
+            <objects>
+                <viewController id="X4K-Ff-9kT" customClass="LocationPickerViewController" customModule="Warhead" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Mnf-40-RK7">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="769"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="37v-fr-wLD">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <standardMapConfiguration key="preferredConfiguration"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1bf-hl-aSP">
+                                <rect key="frame" x="93.666666666666671" y="711" width="205.66666666666663" height="38"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Select and continue">
+                                    <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="20"/>
+                                    <color key="baseForegroundColor" systemColor="systemOrangeColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="lC9-hl-GVU" kind="show" id="Zwf-Fa-gS4"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="WH7-Cp-eFc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1bf-hl-aSP" firstAttribute="centerX" secondItem="WH7-Cp-eFc" secondAttribute="centerX" id="Caz-wm-ncG"/>
+                            <constraint firstItem="37v-fr-wLD" firstAttribute="top" secondItem="WH7-Cp-eFc" secondAttribute="top" id="HDu-xd-PpZ"/>
+                            <constraint firstItem="WH7-Cp-eFc" firstAttribute="bottom" secondItem="1bf-hl-aSP" secondAttribute="bottom" constant="20" id="Uis-id-Boc"/>
+                            <constraint firstItem="37v-fr-wLD" firstAttribute="leading" secondItem="WH7-Cp-eFc" secondAttribute="leading" id="gA2-wb-Udf"/>
+                            <constraint firstItem="WH7-Cp-eFc" firstAttribute="trailing" secondItem="37v-fr-wLD" secondAttribute="trailing" id="lvY-cV-ay6"/>
+                            <constraint firstItem="WH7-Cp-eFc" firstAttribute="bottom" secondItem="37v-fr-wLD" secondAttribute="bottom" id="yuz-KH-YFf"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="gJ6-id-kex"/>
+                    <connections>
+                        <outlet property="mapView" destination="37v-fr-wLD" id="1Z3-CV-wKn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lnF-WC-SuG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2789" y="42"/>
+        </scene>
+        <!--Payload Picker View Controller-->
+        <scene sceneID="E2p-Pr-OIy">
+            <objects>
+                <viewController id="lC9-hl-GVU" customClass="PayloadPickerViewController" customModule="Warhead" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Tjk-jn-gzg">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="769"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.10000000000000001" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="VQE-Pl-1o8">
+                                <rect key="frame" x="46" y="175" width="301" height="31"/>
+                                <color key="minimumTrackTintColor" systemColor="systemGreenColor"/>
+                                <color key="maximumTrackTintColor" red="0.78039217000000005" green="0.2823529541" blue="0.4352940917" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="thumbTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="sliderValueChanged:" destination="lC9-hl-GVU" eventType="valueChanged" id="dHe-WQ-j72"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payload Size: 0.1 ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jh4-AQ-ipD">
+                                <rect key="frame" x="111.66666666666669" y="124" width="170" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" red="0.38823530080000002" green="0.31764706970000001" blue="0.62352943419999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7cK-it-KnB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jh4-AQ-ipD" firstAttribute="centerX" secondItem="7cK-it-KnB" secondAttribute="centerX" id="HDD-8K-ENt"/>
+                            <constraint firstItem="VQE-Pl-1o8" firstAttribute="top" secondItem="jh4-AQ-ipD" secondAttribute="bottom" constant="30" id="aOk-Ip-zVA"/>
+                            <constraint firstItem="VQE-Pl-1o8" firstAttribute="centerX" secondItem="7cK-it-KnB" secondAttribute="centerX" id="jzC-Db-fnw"/>
+                            <constraint firstItem="jh4-AQ-ipD" firstAttribute="top" secondItem="7cK-it-KnB" secondAttribute="top" constant="21" id="qUZ-iA-QyM"/>
+                            <constraint firstItem="VQE-Pl-1o8" firstAttribute="leading" secondItem="7cK-it-KnB" secondAttribute="leading" constant="48" id="rwZ-ci-7Zg"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="dKI-NR-4Wy"/>
+                    <connections>
+                        <outlet property="payloadLabel" destination="jh4-AQ-ipD" id="Qhg-xZ-4kz"/>
+                        <outlet property="slider" destination="VQE-Pl-1o8" id="PDi-re-BlO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aNm-0n-7ct" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3661.8320610687019" y="60.563380281690144"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="IMR-ef-rud"/>
+    </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="Airdrop" width="500" height="500"/>
@@ -262,6 +360,9 @@
         <image name="paperplane.circle" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
